# perceive

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
crates/perceive-cli/: Cargo.toml  cmd.rs  main.rs  repl.rs  search.rs  state.rs
crates/perceive-cli/cmd/: add.rs  hide.rs  model.rs  print.rs  search.rs  source.rs
crates/perceive-core/: Cargo.toml  batch_sender.rs  db.rs  lib.rs  model.rs  paths.rs  search.rs  sources.rs  time_tracker.rs
crates/perceive-core/db/: worker.rs
crates/perceive-core/migrations/: 00001_init.sql  00002_tags.sql  00003_model_7.sql
crates/perceive-core/model/: configs.rs  highlight.rs  tokenize.rs  worker.rs
crates/perceive-core/sources/: chromium_bookmarks.rs  chromium_history.rs  db.rs  fs.rs  import.rs  parse_html.rs  pipeline.rs  scan.rs
crates/perceive-core/sources/pipeline/: calculate_embeddings.rs  import.rs  match_existing_items.rs  read_items.rs  reprocess.rs  update_db.rs
crates/perceive-search/: Cargo.toml  lib.rs
crates/perceive-tauri/: .gitignore  Cargo.toml  build.rs  justfile  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tauri-dev.conf.json  tauri.conf.json
crates/perceive-tauri/src/: tailwind.config.cjs
crates/perceive-tauri/src-tauri/: app_state.rs  main.rs
crates/perceive-tauri/src/lib/: context.ts
crates/perceive-tauri/src/routes/: +layout.svelte  +page.svelte
crates/perceive-tauri/src/src/routes/: +page.svelte
crates/perceive-tauri/web/: .prettierrc  package.json  pnpm-lock.yaml
scripts/: install_models.sh
