[package]
name = "perceive-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "main.rs"
name = "perceive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
"perceive-search" = { path = "../perceive-search" }
rustyline = { version = "10.0.0", features = ["case_insensitive_history_search"] }
shlex = "1.1.0"
tch = "0.10.1"
thiserror = "1.0.38"
