[package]
name = "perceive-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "main.rs"
name = "perceive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.2"
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
eyre = "0.6.8"
indicatif = "0.17.2"
"perceive-core" = { path = "../perceive-core", features = ["clap"] }
rusqlite = { version = "0.28.0", features = ["array", "bundled", "blob"] }
rustyline = { version = "10.0.0", features = ["case_insensitive_history_search"] }
shellexpand = "3.0.0"
shlex = "1.1.0"
strum = "0.24.1"
tch = "0.10.1"
thiserror = "1.0.38"
time = "0.3.17"
