[package]
name = "perceive-core"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"], optional = true }
eyre = "0.6.8"
flume = "0.10.14"
globset = { version = "0.4.9", features = ["serde"] }
ignore = "0.4.18"
itertools = "0.10.5"
rusqlite = { version = "0.28.0", features = ["bundled-full"] }
# Latest git to use the latest tch, which is required for M1
rust-bert = { git = "https://github.com/guillaume-be/rust-bert.git" }
serde = { version = "1.0.152", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
tch = "0.10.1"
time = { version = "0.3.17", features = ["serde"] }

[features]
clap = ["dep:clap"]
