[package]
name = "perceive-core"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.2"
clap = { version = "4.0.32", features = ["derive"], optional = true }
directories = "4.0.1"
eyre = "0.6.8"
flume = "0.10.14"
globset = { version = "0.4.9", features = ["serde"] }
ignore = "0.4.18"
itertools = "0.10.5"
once_cell = { version = "1.16.0", features = ["parking_lot"] }
parking_lot = "0.12.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rusqlite = { version = "0.28.0", features = ["bundled-full"] }
rusqlite_migration = "1.0.1"
# Latest git to use the latest tch, which is required for M1
rust-bert = { git = "https://github.com/guillaume-be/rust-bert.git" }
serde = { version = "1.0.152", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
tch = "0.10.1"
thiserror = "1.0.38"
time = { version = "0.3.17", features = ["serde"] }
tracing = "0.1.37"

[features]
clap = ["dep:clap"]
