[package]
name = "perceive-core"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.2"
byteorder = "1.4.3"
# Need to use OpenBLAS or something on non-Mac platforms since Accelerate is Mac-specific
blas-src = { version = "0.8", default-features = false, features = ["accelerate"] }
clap = { version = "4.0.32", features = ["derive"], optional = true }
crossbeam = "0.8.2"
directories = "4.0.1"
eyre = "0.6.8"
flume = "0.10.14"
globset = { version = "0.4.9", features = ["serde"] }
gray_matter = "0.2.4"
html2text = { version = "0.4.4", optional = true }
http = "0.2.8"
httpdate = { version = "1.0.2", optional = true }
ignore = "0.4.18"
indicatif = { version = "0.17.2", optional = true }
instant-distance = { version = "0.6.0" }
itertools = "0.10.5"
ndarray = { version = "0.15.6", features = ["blas"] }
once_cell = { version = "1.16.0", features = ["parking_lot"] }
parking_lot = "0.12.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rayon = "1.6.1"
# This fork handles IO errors properly
readability = { path = "../../../readability", optional = true }
reqwest = { version = "0.11.13", features = ["blocking", "gzip"], optional = true }
rusqlite = { version = "0.28.0", features = ["bundled-full"] }
rusqlite_migration = "1.0.1"
# Latest git to use the latest tch, which is required for M1
rust-bert = { git = "https://github.com/guillaume-be/rust-bert.git" }
rust_tokenizers = "7.0.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
smallvec = { version = "1.10.0", features = ["const_generics"] }
strum = { version = "0.24.1", features = ["derive"] }
tch = "0.10.1"
tempfile = "3.3.0"
thiserror = "1.0.38"
time = { version = "0.3.17", features = ["serde"] }
tracing = "0.1.37"
zstd = "0.12.1"

[features]
default = ["browser-history"]
cli = ["dep:clap", "dep:indicatif", "instant-distance/indicatif"]
browser-history = ["dep:html2text", "dep:readability", "dep:reqwest", "dep:httpdate"]
